--- a/src/Fragment Screens/Match/match.css
+++ b/src/Fragment Screens/Match/match.css
@@ -40,7 +40,7 @@
 }
 
 .match-container .table .table-body button{
-    background-color: #92B4EC;
+    background-color: blue;
     border: none;
     border-radius: .4rem;
     color: white;
