--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -75,5 +75,5 @@
 .activeNav{
     background-color: white;
     box-shadow: 2px 2px 6px rgb(206, 206, 206);
-    border-left: 2px solid #92B4EC;
+    border-left: 2px solid blue;
 }
