--- a/src/Fragment Screens/Contacts/contact.css
+++ b/src/Fragment Screens/Contacts/contact.css
@@ -60,7 +60,7 @@
     height: 5rem;
     border-radius: .3rem;
     border: none;
-    background-color: #92B4EC;
+    background-color: blue;
     color: white;
     font-weight: 600;
 }
