--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -57,7 +57,7 @@
 	padding: 1rem;
 	width: 20rem;
 	border: none;
-	background-color: #92B4EC;
+	background-color: blue;
 	border-radius: .4rem;
 	color: white;
 	font-weight: bold;
@@ -69,7 +69,7 @@
 	justify-content: center;
 	align-items: center;
 	flex: 1;
-	background-color: #92B4EC;
+	background-color: white;
 	color: white;
 	font-weight: bold;
 	border-bottom-left-radius: 1rem;
