--- a/src/Fragment Screens/Account/account.css
+++ b/src/Fragment Screens/Account/account.css
@@ -157,7 +157,7 @@
     flex: 2;
     height: 3.5rem;
     width: 100%;
-    background-color: blue;
+    background-color: #92B4EC;
     border: none;
     border-radius: .3rem;
     color: white;
